--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
 
   </div>
   </div>
-  <script src="./app.js">
+  <script>
     let searchBox = document.querySelector('.search-box');
 let searchIcon = document.querySelector('.search-icon');
 let navBar = document.querySelector('.nav');
